Edited the notebook conclusion

--- a/emotion_recognition.ipynb
+++ b/emotion_recognition.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -46,6 +47,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -53,6 +55,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -76,6 +79,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -93,6 +97,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,6 +149,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,6 +192,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -442,6 +449,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -586,6 +594,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -972,6 +981,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1032,6 +1042,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1103,6 +1114,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1110,6 +1122,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1155,6 +1168,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1166,7 +1180,7 @@
     "\n",
     "It is no surprise after doing this project that computer vision and getting machines to accurately describe what is in a picture is a huge research area and that most research articles published are about a model for a specific task. It takes a lot of testing, iterating, and refining of the model, and input data to achieve the results. The other key factor though is time.\n",
     "\n",
-    "To run the training set on our small laptops took a lot of time (more than 20 minutes a training run on 10 epochs but closer to an hour with 30), and it is no wonder why sometimes it can take months to train these research data sets. A powerful computer is important, and managing the minibatch is crucial when working with a lower-spec computer."
+    "Running the training set on our small laptops took a lot of time (more than 20 minutes for a training run on 10 epochs but closer to an hour on 30 epochs), and it is no wonder why sometimes it can take months to train these research data sets. A powerful computer is important, and managing the minibatch is crucial when working with a lower-spec computer."
    ]
   }
  ],
