Minor modifications in the notebook

--- a/emotion_recognition.ipynb
+++ b/emotion_recognition.ipynb
@@ -1,11 +1,16 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning Project\n",
+    "<div align=\"center\">\n",
+    "  <a href=\"https://github.com/andreihar/emotion-recognition\">\n",
+    "\t<img src=\"readme/logo.svg\" alt=\"Logo\" width=\"80\" height=\"80\">\n",
+    "  </a>\n",
+    "  <h1>Emotion Recognition</h1>\n",
+    "</div>\n",
+    "\n",
     "\n",
     "### 1.1 - Find a dataset\n",
     "\n",
@@ -47,7 +52,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -55,7 +59,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -79,7 +82,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -97,7 +99,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -149,7 +150,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -192,7 +192,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -407,10 +406,6 @@
     "|   | Dropout            |                     |             |        |                  |            |\n",
     "| 8 | Dense              | -                   | -           | -      | 7                | Softmax    |\n",
     "\n",
-    "The model diagram had an interesting look with the input being fed into later convolution layers:\n",
-    "\n",
-    "<img src=\"diagrams/model4.png\" height=\"700px\">\n",
-    "\n",
     "With these modifications, the model demonstrated the following performance:\n",
     "\n",
     "`Train loss: 0.8589`\n",
@@ -449,7 +444,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -594,7 +588,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -661,7 +654,7 @@
     "\n",
     "##### Conclusion on Altering Exponential Decay Rates\n",
     "\n",
-    "There seemed to be no gains with impacting the optimizer properties. All we can observe in these plots is the overfitting effect of running more iterations on the training data. \n",
+    "There seemed to be no gains with impacting the optimiser properties. All we can observe in these plots is the overfitting effect of running more iterations on the training data. \n",
     "\n",
     "#### Minibatch size\n",
     "\n",
@@ -981,7 +974,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1042,7 +1034,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1114,7 +1105,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1122,7 +1112,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1168,7 +1157,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1191,7 +1179,7 @@
    "launcher_item_id": "24mxX"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1205,7 +1193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
